# simple_webpage

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app-spec.yaml  config.toml  deploy-app.sh  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci-cd.yml  deploy-digitalocean.yml
docs/: architecture.md
src/: app.py  cli.py
static/: index.html
static/css/: styles.css
static/js/: main.js
templates/: index.html
tests/: e2e_test.py  test_app.py
